--- a/MyShop/MyShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
             <div class="navbar-collapse collapse">s
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
+                    @if (Request.IsAuthenticated && User.IsInRole("ADMIN"))
+                    {
+                        <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
                 @{ 
